Repaired z-index of search????????? Yes?

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -304,6 +304,7 @@
 {
 	padding: 0;
 	margin: 0;
+	z-index:10;
 }
 .token-input-dropdown li
 {
